Address was fixed

--- a/art_style/index.html
+++ b/art_style/index.html
@@ -308,7 +308,7 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="footer_item">
 							<h4>Наш адрес:</h4>	
-							<p>г.Киев <br> ул. Б.Васильковская 34, кв.3</p>
+							<p>г.Киев <br> ул. Б.Васильковская 34, кв.x</p>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
