Pictures were optimized

--- a/art_style/index.html
+++ b/art_style/index.html
@@ -119,7 +119,7 @@
 								<p>Перепланировка квартиры была минимальной: убрана перегородка между кухней и холлом. За счет этого расширилось пространство. Для отделки выбрали нестандартные цветовые решения: насыщенный голубой в гостиную и горчичный в спальню.</p>
 							</div>
 						</div>
-						<img src="img/work-1.png" alt="work-1" class="img-responsive">
+						<img src="img/work-1.jpg" alt="work-1" class="img-responsive">
 					</div>					
 				</div>
 				<div class="col-md-3 col-sm-6 p0">	
@@ -130,7 +130,7 @@
 								<p>Осуществили зонирование пространства, выделив основные зоны для работы и отдыха. Чтобы визуально расширить площадь квартиры и впустить в нее больше воздуха, для отделки выбрали светлые оттенки. В итоге получили современный стильный и функциональный интерьер. </p>
 							</div>
 						</div>
-						<img src="img/work-2.png" alt="work-2" class="img-responsive">
+						<img src="img/work-2.jpg" alt="work-2" class="img-responsive">
 					</div>					
 				</div>
 				<div class="col-md-3 col-sm-6 p0">	
@@ -141,7 +141,7 @@
 								<p>По желанию заказчика сделали новую планировку квартиры. Для использования каждого квадратного метра с пользой осуществили зонирование пространства, выделив основные зоны для работы и отдыха.</p>
 							</div>
 						</div>
-						<img src="img/work-3.png" alt="work-3" class="img-responsive">
+						<img src="img/work-3.jpg" alt="work-3" class="img-responsive">
 					</div>					
 				</div>
 				<div class="col-md-3 col-sm-6 p0">	
@@ -152,7 +152,7 @@
 								<p>в ходе перепланировки гостиную объединили с кухней-столовой, добавили две гардеробные, в коридоре установили два двухметровых зеркала. Остановились на природных и имитирующих природные материалах.</p>
 							</div>
 						</div>
-						<img src="img/work-4.png" alt="work-4" class="img-responsive">
+						<img src="img/work-4.jpg" alt="work-4" class="img-responsive">
 					</div>					
 				</div>
 				<div class="col-md-3 col-sm-6 p0">	
@@ -163,7 +163,7 @@
 								<p>Пространство условно разделено на зону гостинной, обеденную и кухонную. Черная и красная мебель эффектно смотрится на фоне светлого пола.</p>
 							</div>
 						</div>
-						<img src="img/work-5.png" alt="work-5" class="img-responsive">
+						<img src="img/work-5.jpg" alt="work-5" class="img-responsive">
 					</div>					
 				</div>
 				<div class="col-md-3 col-sm-6 p0">	
@@ -174,7 +174,7 @@
 								<p>Дом находится в садовой зоне и в гостиную не попадают прямые солнечные лучи. Отсюда было принято решение о максимальном использовании искусственного освещения. Открытое пространство первого этажа условно разделено на зону гостинной, обеденную, и кухонные зоны.</p>
 							</div>
 						</div>
-						<img src="img/work-6.png" alt="work-6" class="img-responsive">
+						<img src="img/work-6.jpg" alt="work-6" class="img-responsive">
 					</div>					
 				</div>
 				<div class="col-md-3 col-sm-6 p0">	
@@ -185,7 +185,7 @@
 								<p>Хозяевам нравится лофт, но просто белый кирпич казался им скучным, хотелось чего-то яркого. Поэтому в гостиную мебель мы подобрали ярких тонах.</p>
 							</div>
 						</div>
-						<img src="img/work-7.png" alt="work-7" class="img-responsive">
+						<img src="img/work-7.jpg" alt="work-7" class="img-responsive">
 					</div>					
 				</div>
 				<div class="col-md-3 col-sm-6 p0">	
@@ -196,7 +196,7 @@
 								<p>Выбрали классические цветовые решения: насыщенный коричневый в гостиную и горчично-золотистый в спальню. В декоре преобладает стиль американская классика с элементами ар-деко.</p>
 							</div>
 						</div>
-						<img src="img/work-8.png" alt="work-8" class="img-responsive">
+						<img src="img/work-8.jpg" alt="work-8" class="img-responsive">
 					</div>					
 				</div>
 			</div>
