Art Styles: Ref for button was added

--- a/art_style/index.html
+++ b/art_style/index.html
@@ -52,7 +52,7 @@
 					<div class="title_block">
 						<h1>Создаем идеальные интерьеры!</h1>
 						<p>Оперативно и качественно сделаем стильный и современный внешний вид дома, который будет соответствовать вашей мечте!</p>
-						<button class="but_my">читать больше</button>
+						<button class="but_my" onclick="location.href='#features'">читать больше</button>
 					</div>
 				</div>
 			</div>
