AS: first ref is active

--- a/art_style/index.html
+++ b/art_style/index.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="collapse navbar-collapse navbar-right" id="main_menu">
 					<ul class="nav navbar-nav">
-						<li><a href="#">О нас</a></li>
+						<li><a href="#" class="active-ref">О нас</a></li>
 						<li><a href="#features">Наши принципы</a></li>
 						<li><a href="#works">Портфолио</a></li>
 						<li><a href="#team">Наша команда</a></li>
