Homemade Sweets are completed

--- a/art_style/index.html
+++ b/art_style/index.html
@@ -363,7 +363,7 @@
 	            <div class="modal-body">
 	                <form action="#" id="RecallForm">
 	                	<input type="text" class="form-control" placeholder="Имя">
-	                	<input type="email" class="form-control" placeholder="E-mail">
+	                	<input type="tel" class="form-control" placeholder="Ваш номер телефона">
 	                	<input type="text" class="form-control" placeholder="Время удобное для телефонного звонка">
 	                	<input type="submit" value="ОК" class="but_my">
 	                </form>
