--- a/homemade_sweets/index.html
+++ b/homemade_sweets/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="keywords" content="торты на заказ Ирпень Киев Буча Гостомель">
-	<meta name="description" content="Самые вкусные торты на заказ в Ирпене. Индивидуальный подход к клиентам. Каждая деталь сделана с любовью.">
+	<meta name="keywords" content="торты на заказ">
+	<meta name="description" content="Самые вкусные торты на заказ. Индивидуальный подход к клиентам. Каждая деталь сделана с любовью.">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -20,7 +20,7 @@
 		<div class="collapse navbar-collapse justify-content-center" id="menu">
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a href="#cakes" class="nav-link"">Торты</a>
+					<a href="#cakes" class="nav-link">Торты</a>
 				</li>
 				<li class="nav-item">
 					<a href="#sweets" class="nav-link">Вкусняшки</a>
@@ -103,7 +103,7 @@
 		<div class="container">
 			<div class="row">
 					<div class="col-12">
-						<h4 class="text-center">Торты</h4>	
+						<h4 class="text-center">Торты на заказ</h4>	
 					</div>
 					<div class="col-lg-3 col-md-5 offset-lg-0 offset-md-1">
 						<div class="card bg-primary text-white">
@@ -247,7 +247,7 @@
 					<div class="col-lg-3 col-md-5 offset-lg-0 offset-md-1">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet1.jpg" alt="Кексы 'Love'"class="img-fluid rounded" title="Кексы 'Love'">		
+								<img src="img/sweet1.jpg" alt="Кексы 'Love'" class="img-fluid rounded" title="Кексы 'Love'">		
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Кексы "Love"</p>
@@ -257,7 +257,7 @@
 					<div class="col-lg-3 col-md-5">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet2.jpg" alt="Кенди бар 'Веселые Миньены'"class="img-fluid rounded" title="Кенди бар 'Веселые Миньены'">		
+								<img src="img/sweet2.jpg" alt="Кенди бар 'Веселые Миньены'" class="img-fluid rounded" title="Кенди бар 'Веселые Миньены'">		
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Кенди бар "Миньены"</p>
@@ -267,7 +267,7 @@
 					<div class="col-lg-3 col-md-5 offset-lg-0 offset-md-1">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet3.jpg" alt="Зефирки"class="img-fluid rounded" title="Зефирки">
+								<img src="img/sweet3.jpg" alt="Зефирки" class="img-fluid rounded" title="Зефирки">
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Зефирки</p>
@@ -277,7 +277,7 @@
 					<div class="col-lg-3 col-md-5">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet4.jpg" alt="Десерт 'Тирамису'"class="img-fluid rounded" title="Десерт 'Тирамису'">
+								<img src="img/sweet4.jpg" alt="Десерт 'Тирамису'" class="img-fluid rounded" title="Десерт 'Тирамису'">
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Десерт "Тирамису"</p>
@@ -287,7 +287,7 @@
 					<div class="col-lg-3 col-md-5 offset-lg-0 offset-md-1">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet5.jpg" alt="Пасхальный кулич"class="img-fluid rounded" title="Пасхальный кулич">		
+								<img src="img/sweet5.jpg" alt="Пасхальный кулич" class="img-fluid rounded" title="Пасхальный кулич">		
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Пасхальный кулич</p>
@@ -297,7 +297,7 @@
 					<div class="col-lg-3 col-md-5">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet6.jpg" alt="Фрукты в карамели"class="img-fluid rounded" title="Фрукты в карамели">
+								<img src="img/sweet6.jpg" alt="Фрукты в карамели" class="img-fluid rounded" title="Фрукты в карамели">
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Фрукты в карамели</p>
@@ -307,7 +307,7 @@
 					<div class="col-lg-3 col-md-5 offset-lg-0 offset-md-1">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet7.jpg" alt="Шоколадные кексы"class="img-fluid rounded" title="Шоколадные кексы">
+								<img src="img/sweet7.jpg" alt="Шоколадные кексы" class="img-fluid rounded" title="Шоколадные кексы">
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Шоколадные кексы</p>
@@ -317,7 +317,7 @@
 					<div class="col-lg-3 col-md-5">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet8.jpg" alt="Кексы 'Лето'"class="img-fluid rounded" title="Кексы 'Лето'">	
+								<img src="img/sweet8.jpg" alt="Кексы 'Лето'" class="img-fluid rounded" title="Кексы 'Лето'">	
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Кексы "Лето"</p>
@@ -334,7 +334,7 @@
 						<div class="col-lg-3 col-md-5 offset-lg-0 offset-md-1">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet9.jpg" alt="Кексы 'Ягодки'"class="img-fluid rounded" title="Кексы 'Ягодки'">		
+								<img src="img/sweet9.jpg" alt="Кексы 'Ягодки'" class="img-fluid rounded" title="Кексы 'Ягодки'">		
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Кексы "Ягодки"</p>
@@ -344,7 +344,7 @@
 					<div class="col-lg-3 col-md-5">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet10.jpg" alt="Яйцо Фаберже"class="img-fluid rounded" title="Яйцо Фаберже">		
+								<img src="img/sweet10.jpg" alt="Яйцо Фаберже" class="img-fluid rounded" title="Яйцо Фаберже">		
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Яйцо Фаберже</p>
@@ -354,7 +354,7 @@
 					<div class="col-lg-3 col-md-5 offset-lg-0 offset-md-1">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet11.jpg" alt="Печенье 'С 8 Марта'"class="img-fluid rounded" title="Печенье 'С 8 Марта'">
+								<img src="img/sweet11.jpg" alt="Печенье 'С 8 Марта'" class="img-fluid rounded" title="Печенье 'С 8 Марта'">
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Печенье "С 8 Марта"</p>
@@ -364,7 +364,7 @@
 					<div class="col-lg-3 col-md-5">
 						<div class="card bg-primary text-white">
 							<div class="card-body">
-								<img src="img/sweet12.jpg" alt="Кексы 'Бусинки'"class="img-fluid rounded" title="Кексы 'Бусинки'">
+								<img src="img/sweet12.jpg" alt="Кексы 'Бусинки'" class="img-fluid rounded" title="Кексы 'Бусинки'">
 							</div>
 							<div class="card-footer">
 								<p class="text-center">Кексы "Бусинки"</p>
@@ -481,10 +481,10 @@
 				<div class="col-8 offset-2">
 					<h4 class="text-center">Доставка</h4>
 					<p>У Вас есть возможность забрать заказ самостоятельно по адресу:<br>
-					г. Ирпень, ул. Киевская 12</p>
+					г. Ирпень, ул. Тургеневская 15</p>
 				</div>
 				<div class="col-12 text-center" id="way"> 
-					<a href="https://www.google.com/maps/dir//%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9A%D0%B8%D1%97%D0%B2%D1%81%D1%8C%D0%BA%D0%B0,+12,+%D0%86%D1%80%D0%BF%D1%96%D0%BD%D1%8C,+%D0%9A%D0%B8%D1%97%D0%B2%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB.,+08200/@50.5143638,30.2278482,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0x472b33da076a6245:0x7d6d7eaf4b78f78!2m2!1d30.2322256!2d50.5143639" class="btn btn-outline-secondary" role="button" target="_blank">Посмотреть маршрут</a>
+					<a href="https://www.google.com/maps/dir//%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%A2%D1%83%D1%80%D0%B3%D0%B5%D0%BD%D1%94%D0%B2%D1%81%D1%8C%D0%BA%D0%B0,+15,+%D0%86%D1%80%D0%BF%D1%96%D0%BD%D1%8C,+%D0%9A%D0%B8%D1%97%D0%B2%D1%81%D1%8C%D0%BA%D0%B0+%D0%BE%D0%B1%D0%BB.,+08200/@50.5259908,30.2256389,15.39z/data=!4m8!4m7!1m0!1m5!1m1!1s0x472b322a3152dbd9:0xc8feb5081ca838a2!2m2!1d30.241758!2d50.5277375" class="btn btn-outline-secondary" role="button" target="_blank">Посмотреть маршрут</a>
 				</div>
 				<div class="col-12 text-center">
 					<img src="img/map.jpg" alt="г. Ирпинь, ул. Киевская 12" title="г. Ирпинь" class="img-fluid">
@@ -501,23 +501,23 @@
 				</div>
 				<div class="col-12 text-center">
 					<i class="fas fa-map-marker-alt"></i>
-					<span>г. Ирпень, ул. Киевская 12</span>	
+					<span>г. Ирпень, ул. Тургеневская 15</span>	
 				</div>
 				<div class="col-12 text-center">
 					<i class="fas fa-phone"></i>
 					<span>+38(096)620-47-58</span>	
 				</div>
 				<div class="col-12 text-center">
-					<a href="https://www.facebook.com/" class="btn btn-outline-primary" role="button" target="_blank"><i class="fab fa-facebook-f"></i></a>
-					<a href="https://www.instagram.com/" class="btn btn-outline-primary" role="button" target="_blank"><i class="fab fa-instagram"></i></a>
-					<a href="https://vk.com/" class="btn btn-outline-primary" role="button" target="_blank"><i class="fab fa-vk"></i></a>
+					<a href="https://www.facebook.com/profile.php?id=100009744878979" class="btn btn-outline-primary" role="button" target="_blank"><i class="fab fa-facebook-f"></i></a>
+					<a href="https://www.instagram.com/oksanakivak/?hl=uk" class="btn btn-outline-primary" role="button" target="_blank"><i class="fab fa-instagram"></i></a>
+					<!--<a href="https://vk.com/" class="btn btn-outline-primary" role="button" target="_blank"><i class="fab fa-vk"></i></a>-->
 				</div>		
 			</div>
 		</div>
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-12 text-center" id="copyright-block">
-					© Nina Lukashenko, 2018.
+					© Торты на заказ, 2018 - 2019.
 				</div>
 			</div>
 		</div>
